fix fast click on submenu collapse bug

--- a/packages/theme-default/src/tree.css
+++ b/packages/theme-default/src/tree.css
@@ -90,8 +90,6 @@
     & > .el-tree-node__children {
       overflow: hidden;
       background-color: transparent;
-      /** padding-left: 16px; */
-      display: none;
     }
 
     &.is-expanded > .el-tree-node__children {
